# stm32f103c8t6MiniBoard

./: .gitignore  .mxproject  CMakeLists.txt  Kconfig  Makefile  README.md  stm32f103c8t6.ioc
Core/: Kconfig
Core/Src/: main.c  usart.c
Drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
MDK-ARM/: stm32f103c8t6.uvoptx  stm32f103c8t6.uvprojx
cmake/: target-def.cmake
cmake/menuconfig/: README.md  menuconfig.cmake
cmake/menuconfig/scripts/: generateBuildInfo.py  generateConfigFile.py  menuconfigProject.py
